# TexasAI

./: .gitignore  README.md
texasgpt/: README.md  component.py  pyproject.toml  requirements.txt  start.sh
texasgpt/app/: server.py
texasgpt/app/openapi/: base.py
texasgpt/app/play_poker/: api.py
texasgpt/app/play_poker/request/: request.py
texasgpt/core/poker/: poker_player.py
texasgpt/core/schema/: api.py
texasgpt/serve/core/: schemas.py
texasgpt/test_script/: test_http_curl
texasgpt/texasgpt/: __init__.py
texasgpt/texasgpt/_private/: config.py
texasgpt/texasgpt/app/: base.py  server.py
texasgpt/texasgpt/app/openapi/: api_view_model.py
texasgpt/texasgpt/app/play_poker/: api.py
texasgpt/texasgpt/configs/: model_config.py
texasgpt/texasgpt/core/_private/: example_base.py
texasgpt/texasgpt/core/poker/: models.py  poker_action_history.py  poker_deck.py  poker_table.py
texasgpt/texasgpt/serve/core/: config.py
texasgpt/texasgpt/test_script/: test_http_curl
texasgpt/texasgpt/util/: command_utils.py  config_utils.py  executor_utils.py  fastapi.py  i18n_utils.py  id_generator.py  pagination_utils.py  parameter_utils.py  utils.py
texasgpt/texasgpt/util/speech/: base.py  eleven_labs.py  gtts.py  macos_tts.py  say.py
texasgpt/texasgpt/util/tests/: test_function_utils.py  test_parameter_utils.py
texasgpt/texasgpt/util/tracer/: __init__.py  base.py  opentelemetry.py  span_storage.py  tracer_cli.py  tracer_impl.py  tracer_middleware.py
texasgpt/util/: annotations.py  file_client.py  function_utils.py
texasgpt/util/speech/: brian.py
(+32 files in other folders)
